// Needed to proto2 rather than proto3 to get pointer field for PermArg
syntax = 'proto3';

option go_package = "github.com/klyed/hivesmartchain/rpc";

import "gogoproto/gogo.proto";
import "tendermint.proto";
import "validator.proto";
import "bcm.proto";

package rpc;

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

message ResultStatus {
    string ChainID = 1;
    string RunID = 2;
    string HscVersion = 3;
    bytes GenesisHash = 4 [(gogoproto.customtype) = "github.com/klyed/hivesmartchain/binary.HexBytes", (gogoproto.nullable) = false];
    tendermint.NodeInfo NodeInfo = 5;
    bcm.SyncInfo SyncInfo = 6;
    // When catching up in fast sync
    bool CatchingUp = 8 [(gogoproto.jsontag) = ""];
    validator.Validator ValidatorInfo = 7;
}
